--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Typing Master</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="scrpit.js"></script>
 </head>
 
 <body>
@@ -42,5 +41,5 @@
         </div>
     </div>
 </body>
-
+<script defer src="script.js"></script>
 </html>
